wasmer/include/wasm.h

    ///////////////////////////////////////////////////////////////////////////////
    // Auxiliaries

    // Machine types

    typedef char byte_t;
    typedef float float32_t;
    typedef double float64_t;
    ///////////////////////////////////////////////////////////////////////////////
    // Runtime Environment

    // Configuration

    WASM_DECLARE_OWN(config)

    WASM_API_EXTERN own wasm_config_t *wasm_config_new();
    // Embedders may provide custom functions for manipulating configs.

    // Engine

    WASM_DECLARE_OWN(engine)

    WASM_API_EXTERN own wasm_engine_t *wasm_engine_new();
    WASM_API_EXTERN own wasm_engine_t *wasm_engine_new_with_config(own wasm_config_t *);
    // Store

    WASM_DECLARE_OWN(store)

    WASM_API_EXTERN own wasm_store_t *wasm_store_new(wasm_engine_t *);
    typedef struct wasm_limits_t
    {
        uint32_t min;
        uint32_t max;
    } wasm_limits_t;
    WASM_API_EXTERN own wasm_valtype_t *wasm_valtype_new(wasm_valkind_t);
    WASM_API_EXTERN wasm_valkind_t wasm_valtype_kind(const wasm_valtype_t *);
    ///////////////////////////////////////////////////////////////////////////////
    // Runtime Objects

    // Values

    struct wasm_ref_t;
    typedef union wasm_val_inner
    {
        int32_t i32;
        int64_t i64;
        float64_t f64;
        float32_t f32;
        struct wasm_ref_t *ref;
    } wasm_val_inner;
    typedef struct wasm_val_t
    {
        wasm_valkind_t kind;
        wasm_val_inner of;
    } wasm_val_t;
    // Traps

    typedef wasm_name_t wasm_message_t; // null terminated
    WASM_DECLARE_REF(trap)

    WASM_API_EXTERN own wasm_trap_t *wasm_trap_new(wasm_store_t *store, const wasm_message_t *);
    WASM_API_EXTERN void wasm_trap_message(const wasm_trap_t *, own wasm_message_t *out);
    WASM_API_EXTERN own wasm_frame_t *wasm_trap_origin(const wasm_trap_t *);
    WASM_API_EXTERN void wasm_trap_trace(const wasm_trap_t *, own wasm_frame_vec_t *out);
    // Modules

    WASM_DECLARE_SHARABLE_REF(module)

    WASM_API_EXTERN own wasm_module_t *wasm_module_new(
        wasm_store_t *, const wasm_byte_vec_t *binary);
    WASM_API_EXTERN void wasm_module_imports(const wasm_module_t *, own wasm_importtype_vec_t *out);
    WASM_API_EXTERN void wasm_module_exports(const wasm_module_t *, own wasm_exporttype_vec_t *out);
    WASM_API_EXTERN void wasm_module_serialize(const wasm_module_t *, own wasm_byte_vec_t *out);
    WASM_API_EXTERN own wasm_module_t *wasm_module_deserialize(wasm_store_t *, const wasm_byte_vec_t *);
    typedef own wasm_trap_t *(*wasm_func_callback_with_env_t)(
        void *env, const wasm_val_vec_t *args, wasm_val_vec_t *results);
    WASM_API_EXTERN own wasm_func_t *wasm_func_new(
        wasm_store_t *, const wasm_functype_t *, wasm_func_callback_t);
    WASM_API_EXTERN own wasm_func_t *wasm_func_new_with_env(
        wasm_store_t *, const wasm_functype_t *type, wasm_func_callback_with_env_t,
        void *env, void (*finalizer)(void *));
    WASM_API_EXTERN own wasm_functype_t *wasm_func_type(const wasm_func_t *);
    WASM_API_EXTERN size_t wasm_func_param_arity(const wasm_func_t *);
    WASM_API_EXTERN size_t wasm_func_result_arity(const wasm_func_t *);
    WASM_API_EXTERN own wasm_trap_t *wasm_func_call(
        const wasm_func_t *, const wasm_val_vec_t *args, wasm_val_vec_t *results);
    // Global Instances

    WASM_DECLARE_REF(global)

    WASM_API_EXTERN own wasm_global_t *wasm_global_new(
        wasm_store_t *, const wasm_globaltype_t *, const wasm_val_t *);
    WASM_API_EXTERN own wasm_globaltype_t *wasm_global_type(const wasm_global_t *);
    WASM_API_EXTERN void wasm_global_get(const wasm_global_t *, own wasm_val_t *out);
    WASM_API_EXTERN void wasm_global_set(wasm_global_t *, const wasm_val_t *);
    WASM_API_EXTERN own wasm_memory_t *wasm_memory_new(wasm_store_t *, const wasm_memorytype_t *);
    WASM_API_EXTERN own wasm_memorytype_t *wasm_memory_type(const wasm_memory_t *);
    WASM_API_EXTERN byte_t *wasm_memory_data(wasm_memory_t *);
    WASM_API_EXTERN size_t wasm_memory_data_size(const wasm_memory_t *);
    WASM_API_EXTERN wasm_memory_pages_t wasm_memory_size(const wasm_memory_t *);
    WASM_API_EXTERN bool wasm_memory_grow(wasm_memory_t *, wasm_memory_pages_t delta);
    WASM_API_EXTERN wasm_extern_t *wasm_func_as_extern(wasm_func_t *);
    WASM_API_EXTERN wasm_extern_t *wasm_global_as_extern(wasm_global_t *);
    WASM_API_EXTERN wasm_extern_t *wasm_table_as_extern(wasm_table_t *);
    WASM_API_EXTERN wasm_extern_t *wasm_memory_as_extern(wasm_memory_t *);
    WASM_API_EXTERN wasm_func_t *wasm_extern_as_func(wasm_extern_t *);
    WASM_API_EXTERN wasm_global_t *wasm_extern_as_global(wasm_extern_t *);
    WASM_API_EXTERN wasm_table_t *wasm_extern_as_table(wasm_extern_t *);
    WASM_API_EXTERN wasm_memory_t *wasm_extern_as_memory(wasm_extern_t *);