wasmer/include/wasmer.h

typedef enum wasmer_compiler_t {
  CRANELIFT = 0,
  LLVM = 1,
  SINGLEPASS = 2,
} wasmer_compiler_t;
typedef enum wasmer_engine_t {
  UNIVERSAL = 0,
  DYLIB = 1,
  STATICLIB = 2,
} wasmer_engine_t;
typedef struct wasmer_features_t wasmer_features_t;
void wasm_config_set_compiler(wasm_config_t *config, enum wasmer_compiler_t compiler);
void wasm_config_set_engine(wasm_config_t *config, enum wasmer_engine_t engine);
void wasm_config_set_features(wasm_config_t *config, struct wasmer_features_t *features);
bool wasmer_features_bulk_memory(struct wasmer_features_t *features, bool enable);
void wasmer_features_delete(struct wasmer_features_t *_features);
bool wasmer_features_memory64(struct wasmer_features_t *features, bool enable);
bool wasmer_features_module_linking(struct wasmer_features_t *features, bool enable);
bool wasmer_features_multi_memory(struct wasmer_features_t *features, bool enable);
bool wasmer_features_multi_value(struct wasmer_features_t *features, bool enable);
struct wasmer_features_t *wasmer_features_new(void);
bool wasmer_features_reference_types(struct wasmer_features_t *features, bool enable);
bool wasmer_features_simd(struct wasmer_features_t *features, bool enable);
bool wasmer_features_tail_call(struct wasmer_features_t *features, bool enable);
bool wasmer_features_threads(struct wasmer_features_t *features, bool enable);
bool wasmer_is_compiler_available(enum wasmer_compiler_t compiler);